<?xml version="1.0" encoding="utf-8"?>

<!--- Se crea el layout que es para que los widgets que estén dentro de este -->
<!---  contenedor basarán su posición en relación con los otros elementos. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    tools:context="com.juangabrielgomila.counter.MainActivity">

    <!--- Se crea un textView que se iniciara en 0 -->
    <!--- Los TextView son propiedades de texto que nos van a permitir personalizar nuestros Layout-->

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_view_0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <!--- Se crea un boton personalizado que sera para tener un + -->
    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_view"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_add"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <!--- Se crea un boton que servira para sumar a una variable A -->
    <Button
        android:id="@+id/btnGrow"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnAdd"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="34dp"
        android:text="@string/btn_grow"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <!--- Se crea el boton para ocultar  -->
    <Button
        android:id="@+id/btnHide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnGrow"
        android:layout_centerVertical="true"
        android:text="@string/btn_hide"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <!--- Se crea el boton que restara -->
    <Button
        android:id="@+id/btnTake"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGrow"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:text="@string/btn_take"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <!--- Se crea el boton que restara a la variable A -->
    <Button
        android:id="@+id/btnShrink"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnTake"
        android:layout_alignTop="@+id/btnGrow"
        android:text="@string/btn_shrink"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <!---  Se crea el boton para reiniciar el conteo-->
    <Button
        android:id="@+id/btnReset"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnShrink"
        android:layout_alignTop="@+id/btnHide"
        android:text="@string/btn_reset"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</RelativeLayout> <!--- Se cierra la etiqueta del layout creado -->
